--- a/public/styles/fonst.css
+++ b/public/styles/fonst.css
@@ -9,5 +9,19 @@
   font-family: 'Montserrat';
   src: url('../fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
   font-weight: 700;
+  font-style: bold;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/Open_Sans/static/OpenSans-Regular.ttf') format('truetype');
+  font-weight: 400;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../fonts/Open_Sans/static/OpenSans-Bold.ttf' ) format('truetype');
+  font-weight: 700;
+  font-style: bold;
 }
