--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -43,15 +43,33 @@ body {
   gap: 49px;
 }
 
+.nav__link {
+  text-decoration: none;
+  font-family: 'Open Sans';
+  font-weight: 600;
+  letter-spacing: 0.2px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+}
+
 /* ===== Buttons ===== */
 .button {
-  padding: 12px 24px;
-  border-radius: 6px;
-  font-size: 16px;
+  font-size: 14px;
+  padding: 15px 40px;
+  border-radius: 5px;
   cursor: pointer;
   border: 1px solid #ff6b5f;
   background-color: transparent;
   color: #ff6b5f;
+}
+
+.button--header {
+  font-size: 20px;
+  font-weight: 500;
+  padding: 8px 60px;
+  border: 2px solid #ff6b5f;
+  border-radius: 7px;
 }
 
 .button--primary {
@@ -106,33 +124,35 @@ body {
 
 .card {
   background-color: #ffffff;
-  padding: 32px;
+  padding: 35px 40px;
   border-radius: 8px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
 }
 
 .card__icon {
-  width: 56px;
-  height: 56px;
+  width: 76px;
+  height: 76px;
   border-radius: 50%;
   background-color: #e84545;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 }
 
 .card__title {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
-  margin-bottom: 12px;
+  line-height: 24px;
+  margin-bottom: 20px;
 }
 
 .card__line {
-  width: 32px;
-  height: 3px;
+  display: block;
+  width: 50px;
+  height: 2px;
   background-color: #e84545;
-  margin-bottom: 12px;
+  margin-bottom: 20px;
 }
 
 .card__text {
