--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -119,7 +119,6 @@ body {
   padding: 80px 0;
   width: 1046px;
   margin: 0 auto;
-
 }
 .hero__title-container {
   margin-bottom: 80px;
@@ -250,6 +249,19 @@ body {
 .form__error {
   color: #e84545;
   font-size: 14px;
+}
+
+.contacts {
+  padding: 100px 0;
+  width: 1046px;
+  margin: 0 auto;
+}
+
+.contacts__title {
+  font-size: 58px;
+  line-height: 80px;
+  letter-spacing: 0.2px;
+  font-weight: 700;
 }
 
 /* ===== Responsive ===== */
